# zing-cli

./: Cargo.toml  README.md
eval/: Cargo.toml
eval/queries/: 001-zklogin-oauth-providers.yaml  002-zklogin-nonce-generation.yaml  003-zklogin-flow-high-level.yaml  004-zklogin-salt-management.yaml  005-zklogin-prover-setup.yaml  006-zklogin-address-derivation.yaml  007-zklogin-security-2fa.yaml  009-gas-budget-transactions.yaml  025-zklogin-proof-caching.yaml
eval/src/: checks.rs  golden.rs  l3_eval.rs  main.rs  report.rs  runner.rs  types.rs
src/: api.rs  config.rs  error.rs  keystore.rs  lib.rs  main.rs  mcp.rs  models.rs  sui.rs
